...
<resources>
    <string name="app_name">My Notie</string>
    <string name="search_button">Search notes.</string>
    <string name="content_description_search">Search button</string>
    <string name="check_notes_button">Check notes.</string>
    <string name="content_description_check_notes">Check notes button</string>
    <string name="note_title">This is a new note. This is a new note. This is a new note. This is a new note. This is a new note. </string>
    <string name="note_body_text">This is Body Text. This is Body Text. This is Body Text. This is Body Text. This is Body Text. This is Body Text. This is Body Text. This is Body Text.</string>
    <string name="note_date_text">Last edited: Jul/13/2020</string>
    <string name="page_title">My notes</string>
    <string name="search_edittext_hint">Search here</string>
    <string name="notes_selected">0 notes selected</string>
    <string name="select_all_notes_button">Select all notes.</string>
    <string name="content_description_select_all_notes">Select all notes.</string>
...
    <string name="add_or_manage_folders">Add or manage folders</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="content_description_app_logo">My Notie</string>
    <string name="content_description_add_new_note">Add new note</string>
    <string name="note_title_hint">Title</string>
    <string name="content_description_note_title_clear_text_button">clear note title text</string>
    <string name="content_description_note_body_text_clear_text_button">clear note body text</string>
    <string name="note_body_text_hint">Note</string>
    <string name="page_title_edit_note">Edit note</string>
    <string name="content_description_edit_note_navigation">Go back</string>
    <string name="content_description_add_to_folders_button">Add to folders.</string>
    <string name="add_to_folder_button_edit_note">Add to folders.</string>
    <string name="revert_changes_button_edit_note">Revert changes</string>
    <string name="delete_note_button_edit_note">Delete note</string>
    <string name="tooltip_add_new_note">Add new note.</string>
    <string name="page_title_add_or_manage_folders">Manage folders</string>
...
