...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:liftOnScroll="true">

        <!-- The Top App Bar. -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar_edit_note"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:visibility="visible"
            app:title="@string/page_title_edit_note"
            android:background="?attr/colorSurface"
            app:navigationIcon="@drawable/go_back_icon"
...
